--- a/ex/index.html
+++ b/ex/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Deep Blue Admin</title>
 
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/local.css" />
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"></link>
+    <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/local.css"></link>
 
     <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
